--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -18,84 +18,144 @@
     }
    ],
    "source": [
+    "#option 1\n",
     "import pandas as pd\n",
     "\n",
-    "# Sample structure of your files list and month labels\n",
-    "gha_files = [gha_jan_df, gha_feb_df, gha_mar_df]  # Replace with actual dataframes\n",
-    "open_files = [open_jan_df, open_feb_df, open_mar_df]  # Replace with actual dataframes\n",
-    "months = [\"Jan 24\", \"Feb 24\", \"Mar 24\"]  # Replace with actual month names\n",
+    "# Define maximum digits for 'Position ID' formatting, based on master file creation\n",
+    "max_digits = max(len(str(pos_id)) for pos_id in master_df['Position ID'].astype(str))\n",
     "\n",
-    "# Define additional columns to check for changes\n",
-    "additional_columns = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
+    "# Define additional columns to check for changes, with corresponding descriptions\n",
+    "additional_cols = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
+    "additional_cols_descriptions = {col: f\"{col} Changed\" for col in additional_cols}\n",
     "\n",
-    "# Initialize the master additional_cols_map to track Position ID and associated columns\n",
-    "additional_cols_map = {}  # Dictionary to store the last known state of additional columns for each Position ID\n",
+    "# Initialize empty DataFrame to store changes\n",
+    "changes_df = pd.DataFrame(columns=master_df.columns.tolist() + ['Month', 'Description'])\n",
     "\n",
-    "# DataFrame to store all changes\n",
-    "changes_df = pd.DataFrame(columns=[\n",
-    "    'Position ID', 'Employee ID', 'Month', 'Description'] + additional_columns\n",
-    ")\n",
+    "for month, gha_file, open_file in zip(months, gha_files, open_files):\n",
+    "    # Load and prepare GHA and Open Position data for the current month\n",
+    "    gha_df = pd.read_excel(gha_file, sheet_name='Headcount - Employee Detail')\n",
+    "    open_pos_df = pd.read_excel(open_file)\n",
+    "    \n",
+    "    # Ensure consistent 'Position ID' format (use zfill if needed)\n",
+    "    if 'Position Number' in gha_df.columns:\n",
+    "        gha_df.rename(columns={'Position Number': 'Position ID'}, inplace=True)\n",
+    "    gha_df['Position ID'] = gha_df['Position ID'].astype(str).str.zfill(max_digits)\n",
+    "    open_pos_df['Position ID'] = open_pos_df['Position ID'].astype(str).str.zfill(max_digits)\n",
+    "    \n",
+    "    # Filter out records where 'Position ID' or 'Employee ID' is unspecified or blank\n",
+    "    gha_df = gha_df[(gha_df['Position ID'] != 'unspecified') & (gha_df['Position ID'] != '')]\n",
+    "    gha_df = gha_df[(gha_df['Employee ID'] != 'unspecified') & (gha_df['Employee ID'] != '')]\n",
+    "    \n",
+    "    # Merge GHA data with master_df based on Position ID and Employee ID\n",
+    "    merged_df = pd.merge(master_df, gha_df, on=['Position ID', 'Employee ID'], how='outer', suffixes=('_master', '_gha'))\n",
     "\n",
-    "# Iterate over each month's file and check for changes\n",
-    "for month, gha_df, open_df in zip(months, gha_files, open_files):\n",
-    "    for df, source in [(gha_df, 'GHA'), (open_df, 'Open Position')]:        \n",
-    "        # Skip if 'Open Position' as it lacks 'Employee ID'\n",
-    "        if source == 'Open Position':\n",
-    "            continue\n",
-    "            \n",
-    "        # Iterate over each row to detect changes\n",
-    "        for _, row in df.iterrows():\n",
-    "            pos_id = row['Position ID']\n",
-    "            emp_id = row['Employee ID']\n",
-    "            \n",
-    "            # Initialize map entry if not exists\n",
-    "            if pos_id not in additional_cols_map:\n",
-    "                additional_cols_map[pos_id] = {\n",
-    "                    'Employee ID': emp_id,\n",
-    "                    **{col: row[col] for col in additional_columns}\n",
-    "                }\n",
-    "                \n",
-    "            # Detect any change in Employee ID or additional columns\n",
-    "            changes_detected = False\n",
-    "            description_list = []\n",
+    "    # Identify changes in 'Position ID' and 'Employee ID' combinations, as well as additional columns\n",
+    "    for _, row in merged_df.iterrows():\n",
+    "        pos_id, emp_id = row['Position ID'], row['Employee ID']\n",
+    "        master_emp_id, gha_emp_id = row['Employee ID_master'], row['Employee ID_gha']\n",
+    "        \n",
+    "        # Check for changes in Position ID and Employee ID combinations\n",
+    "        if pd.notna(master_emp_id) and pd.notna(gha_emp_id) and master_emp_id != gha_emp_id:\n",
+    "            # Log change details if Position ID has a different Employee ID\n",
+    "            changes_df = changes_df.append({\n",
+    "                **row[['Position ID', 'Employee ID_master']],\n",
+    "                'Month': month,\n",
+    "                'Description': 'Position-Employee Combination Changed'\n",
+    "            }, ignore_index=True)\n",
     "\n",
-    "            # Check for Employee ID change\n",
-    "            if additional_cols_map[pos_id]['Employee ID'] != emp_id:\n",
-    "                changes_detected = True\n",
-    "                description_list.append(\"Employee ID Changed\")\n",
-    "                additional_cols_map[pos_id]['Employee ID'] = emp_id\n",
-    "\n",
-    "            # Check for changes in additional columns\n",
-    "            for col in additional_columns:\n",
-    "                current_value = row[col]\n",
-    "                if additional_cols_map[pos_id][col] != current_value:\n",
-    "                    changes_detected = True\n",
-    "                    description_list.append(f\"{col} Changed\")\n",
-    "                    additional_cols_map[pos_id][col] = current_value\n",
-    "\n",
-    "            # If any changes are detected, add to changes_df\n",
-    "            if changes_detected:\n",
-    "                change_entry = {\n",
-    "                    'Position ID': pos_id,\n",
-    "                    'Employee ID': emp_id,\n",
+    "        # Check for changes in additional columns\n",
+    "        for col in additional_cols:\n",
+    "            master_value, gha_value = row[f\"{col}_master\"], row.get(f\"{col}_gha\")\n",
+    "            if pd.notna(master_value) and pd.notna(gha_value) and master_value != gha_value:\n",
+    "                changes_df = changes_df.append({\n",
+    "                    **row[['Position ID', 'Employee ID_master']],\n",
     "                    'Month': month,\n",
-    "                    'Description': \"; \".join(description_list)\n",
-    "                }\n",
-    "                for col in additional_columns:\n",
-    "                    change_entry[col] = row[col]\n",
-    "                changes_df = pd.concat([changes_df, pd.DataFrame([change_entry])], ignore_index=True)\n",
+    "                    'Description': additional_cols_descriptions[col]\n",
+    "                }, ignore_index=True)\n",
     "\n",
-    "# Display or further process changes_df\n",
+    "# Drop duplicates to avoid recording repeated changes in subsequent months\n",
+    "changes_df.drop_duplicates(subset=['Position ID', 'Employee ID_master', 'Description'], inplace=True)\n",
+    "\n",
+    "# View or save changes_df to verify the output\n",
     "print(changes_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb84824a",
+   "id": "2a1a576b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# option 2\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Define the list of GHA and Open Position files along with months for reference\n",
+    "gha_files = [...]  # List of file paths for GHA MoM files\n",
+    "open_pos_files = [...]  # List of file paths for Open Position MoM files\n",
+    "months = [\"Jan 24\", \"Feb 24\", \"Mar 24\", \"Apr 24\", ...]  # Months to track for MoM columns\n",
+    "\n",
+    "# Load master file\n",
+    "master_df = pd.read_excel('master_file.xlsx')\n",
+    "master_df['Position ID'] = master_df['Position ID'].astype(str).str.zfill(6)\n",
+    "\n",
+    "# Initialize a DataFrame to store changes\n",
+    "changes_df = pd.DataFrame(columns=master_df.columns.tolist() + ['Month', 'Description'])\n",
+    "\n",
+    "# Define the additional columns to check for changes\n",
+    "additional_cols = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
+    "\n",
+    "# Define a helper function to standardize Position IDs across all files\n",
+    "def standardize_position_ids(df):\n",
+    "    max_digits = master_df['Position ID'].str.len().max()\n",
+    "    df['Position ID'] = df['Position ID'].astype(str).str.zfill(max_digits)\n",
+    "    return df\n",
+    "\n",
+    "# Loop through each month and each file to detect changes\n",
+    "for month, gha_file, open_pos_file in zip(months, gha_files, open_pos_files):\n",
+    "    # Load GHA and Open Position files for the current month\n",
+    "    gha_df = pd.read_excel(gha_file, sheet_name='Headcount - Employee Detail')\n",
+    "    gha_df = standardize_position_ids(gha_df)\n",
+    "    \n",
+    "    # Apply checks only if Position ID is specified\n",
+    "    gha_df_filtered = gha_df[gha_df['Position ID'] != 'unspecified']\n",
+    "    \n",
+    "    # Iterate through each row in gha_df_filtered to check against master_df\n",
+    "    for _, row in gha_df_filtered.iterrows():\n",
+    "        pos_id = row['Position ID']\n",
+    "        emp_id = row['Employee ID'] if 'Employee ID' in row else 'unspecified'\n",
+    "\n",
+    "        # Find the master record for this Position ID\n",
+    "        master_record = master_df[master_df['Position ID'] == pos_id]\n",
+    "        \n",
+    "        if not master_record.empty:\n",
+    "            # Check for a change in Employee ID\n",
+    "            master_emp_id = master_record['Employee ID'].values[0]\n",
+    "            if emp_id != 'unspecified' and emp_id != master_emp_id:\n",
+    "                change_desc = f\"Employee ID Changed from {master_emp_id} to {emp_id}\"\n",
+    "                change_row = row.append(pd.Series({'Month': month, 'Description': change_desc}))\n",
+    "                changes_df = changes_df.append(change_row, ignore_index=True)\n",
+    "\n",
+    "            # Check for changes in additional columns\n",
+    "            for col in additional_cols:\n",
+    "                if col in row and master_record[col].values[0] != row[col]:\n",
+    "                    change_desc = f\"{col} Changed from {master_record[col].values[0]} to {row[col]}\"\n",
+    "                    change_row = row.append(pd.Series({'Month': month, 'Description': change_desc}))\n",
+    "                    changes_df = changes_df.append(change_row, ignore_index=True)\n",
+    "                    \n",
+    "        else:\n",
+    "            # If no master record exists for this Position ID, it's a new addition\n",
+    "            change_desc = \"New Position ID Entry\"\n",
+    "            change_row = row.append(pd.Series({'Month': month, 'Description': change_desc}))\n",
+    "            changes_df = changes_df.append(change_row, ignore_index=True)\n",
+    "\n",
+    "# Final step: Append changes_df to the master file\n",
+    "changes_df = changes_df[master_df.columns]  # Select only master columns\n",
+    "final_master_df = pd.concat([master_df, changes_df], ignore_index=True)\n",
+    "\n",
+    "# Save the updated master file\n",
+    "final_master_df.to_excel('updated_master_file.xlsx', index=False)\n"
+   ]
   }
  ],
  "metadata": {
