--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -2,6 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8a3cd462",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Additional columns and descriptions for changes\n",
+    "additional_cols = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
+    "additional_cols_descriptions = {col: f\"{col} Changed\" for col in additional_cols}\n",
+    "\n",
+    "# Initialize the changes DataFrame with the required columns\n",
+    "changes_df = pd.DataFrame(columns=master_df.columns.tolist() + ['Month', 'Description'])\n",
+    "\n",
+    "for month, gha_file, open_file in zip(months, gha_files, open_files):\n",
+    "    # Load data\n",
+    "    gha_df = pd.read_excel(gha_file, sheet_name='Headcount - Employee Detail')\n",
+    "    open_pos_df = pd.read_excel(open_file)\n",
+    "    \n",
+    "    # Standardize 'Position ID' formatting\n",
+    "    gha_df['Position ID'] = gha_df['Position ID'].astype(str).str.zfill(max_digits)\n",
+    "    open_pos_df['Position ID'] = open_pos_df['Position ID'].astype(str).str.zfill(max_digits)\n",
+    "    \n",
+    "    # Filter out rows with unspecified or empty Position IDs or Employee IDs in GHA data\n",
+    "    gha_df = gha_df[(gha_df['Position ID'] != 'unspecified') & (gha_df['Position ID'] != '')]\n",
+    "    gha_df = gha_df[(gha_df['Employee ID'] != 'unspecified') & (gha_df['Employee ID'] != '')]\n",
+    "\n",
+    "    # Merge GHA data with master data\n",
+    "    print(\"Debug: GHA Columns before merging:\", gha_df.columns)\n",
+    "    print(\"Debug: Master Columns before merging:\", master_df.columns)\n",
+    "    \n",
+    "    merged_df = pd.merge(\n",
+    "        master_df, gha_df, \n",
+    "        on=['Position ID', 'Employee ID'], \n",
+    "        how='outer', \n",
+    "        suffixes=('_master', '_gha')\n",
+    "    )\n",
+    "    \n",
+    "    # Debug column names after merging\n",
+    "    print(\"Debug: Columns in merged_df after merging:\", merged_df.columns)\n",
+    "    \n",
+    "    # If columns aren't named as expected, skip further processing in this loop iteration\n",
+    "    if 'Employee ID_master' not in merged_df.columns or 'Employee ID_gha' not in merged_df.columns:\n",
+    "        print(\"Warning: Expected columns 'Employee ID_master' and 'Employee ID_gha' not found.\")\n",
+    "        continue\n",
+    "    \n",
+    "    # Detect changes\n",
+    "    for _, row in merged_df.iterrows():\n",
+    "        pos_id, emp_id = row['Position ID'], row['Employee ID']\n",
+    "        master_emp_id, gha_emp_id = row['Employee ID_master'], row['Employee ID_gha']\n",
+    "        \n",
+    "        # Record changes in Position ID and Employee ID combinations\n",
+    "        if pd.notna(master_emp_id) and pd.notna(gha_emp_id) and master_emp_id != gha_emp_id:\n",
+    "            changes_df = changes_df.append({\n",
+    "                **row[['Position ID', 'Employee ID_master']],\n",
+    "                'Month': month,\n",
+    "                'Description': 'Position-Employee Combination Changed'\n",
+    "            }, ignore_index=True)\n",
+    "\n",
+    "        # Check for additional column changes\n",
+    "        for col in additional_cols:\n",
+    "            master_value, gha_value = row.get(f\"{col}_master\"), row.get(f\"{col}_gha\")\n",
+    "            if pd.notna(master_value) and pd.notna(gha_value) and master_value != gha_value:\n",
+    "                changes_df = changes_df.append({\n",
+    "                    **row[['Position ID', 'Employee ID_master']],\n",
+    "                    'Month': month,\n",
+    "                    'Description': additional_cols_descriptions[col]\n",
+    "                }, ignore_index=True)\n",
+    "\n",
+    "# Remove duplicates\n",
+    "changes_df.drop_duplicates(subset=['Position ID', 'Employee ID_master', 'Description'], inplace=True)\n",
+    "\n",
+    "# Output the changes DataFrame\n",
+    "print(changes_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "b0ad55b0",
    "metadata": {},
@@ -83,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a1a576b",
+   "id": "9481ec59",
    "metadata": {},
    "outputs": [],
    "source": [
