--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,59 +3,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de5037dc",
+   "id": "c6e7eafa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Columns and descriptions to track changes\n",
+    "# Additional columns to track for changes and their descriptions\n",
     "additional_cols = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
     "additional_cols_descriptions = {col: f\"{col} Changed\" for col in additional_cols}\n",
     "\n",
-    "# Initialize the changes DataFrame with required columns\n",
+    "# Initialize changes DataFrame\n",
     "changes_df = pd.DataFrame(columns=master_df.columns.tolist() + ['Month', 'Description'])\n",
     "\n",
     "for month, gha_file, open_file in zip(months, gha_files, open_files):\n",
-    "    # Load and preprocess GHA data\n",
+    "    # Load GHA and Open Position data for the current month\n",
     "    gha_df = pd.read_excel(gha_file, sheet_name='Headcount - Employee Detail')\n",
     "    open_pos_df = pd.read_excel(open_file)\n",
     "    \n",
-    "    # Rename columns to match master_df's format\n",
+    "    # Rename 'Position Number' to 'Position ID' to match master_df\n",
     "    gha_df.rename(columns={'Position Number': 'Position ID'}, inplace=True)\n",
     "    open_pos_df.rename(columns={'Position Number': 'Position ID'}, inplace=True)\n",
-    "    \n",
-    "    # Ensure Position ID and Employee ID are strings\n",
+    "\n",
+    "    # Standardize Position ID and Employee ID to strings, with zero-padding for Position ID\n",
     "    gha_df['Position ID'] = gha_df['Position ID'].astype(str).str.zfill(max_digits)\n",
     "    gha_df['Employee ID'] = gha_df['Employee ID'].astype(str)\n",
     "    open_pos_df['Position ID'] = open_pos_df['Position ID'].astype(str).str.zfill(max_digits)\n",
     "\n",
-    "    # Filter out rows with 'unspecified' or blank Position or Employee IDs\n",
-    "    gha_df = gha_df[(gha_df['Position ID'] != 'unspecified') & (gha_df['Position ID'] != '')]\n",
-    "    gha_df = gha_df[(gha_df['Employee ID'] != 'unspecified') & (gha_df['Employee ID'] != '')]\n",
-    "\n",
-    "    # Merge GHA data with master data\n",
+    "    # Print column names to verify alignment\n",
+    "    print(\"Debug: Columns in master_df:\", master_df.columns)\n",
+    "    print(\"Debug: Columns in gha_df:\", gha_df.columns)\n",
+    "    \n",
+    "    # Merge on Position ID and Employee ID, with unique suffixes\n",
     "    merged_df = pd.merge(\n",
-    "        master_df, gha_df, \n",
-    "        on=['Position ID', 'Employee ID'], \n",
-    "        how='outer', \n",
+    "        master_df, gha_df,\n",
+    "        on=['Position ID', 'Employee ID'],\n",
+    "        how='outer',\n",
     "        suffixes=('_master', '_gha')\n",
     "    )\n",
     "    \n",
-    "    # Check merged_df columns to verify expected columns are present\n",
+    "    # Check merged columns to verify expected columns are present\n",
     "    print(\"Debug: Columns in merged_df after merging:\", merged_df.columns)\n",
     "    \n",
-    "    # Skip processing if expected columns are missing\n",
+    "    # If expected columns are missing, print a warning and skip the iteration\n",
     "    if 'Employee ID_master' not in merged_df.columns or 'Employee ID_gha' not in merged_df.columns:\n",
     "        print(\"Warning: Expected columns 'Employee ID_master' and 'Employee ID_gha' not found.\")\n",
     "        continue\n",
     "    \n",
-    "    # Detect changes in Employee ID based on Position ID and vice versa\n",
+    "    # Track changes in Position-Employee combinations\n",
     "    for _, row in merged_df.iterrows():\n",
     "        pos_id = row['Position ID']\n",
     "        master_emp_id, gha_emp_id = row.get('Employee ID_master'), row.get('Employee ID_gha')\n",
     "        \n",
-    "        # Track changes in Position-Employee combinations\n",
+    "        # Detect Employee ID changes for the same Position ID\n",
     "        if pd.notna(master_emp_id) and pd.notna(gha_emp_id) and master_emp_id != gha_emp_id:\n",
     "            changes_df = changes_df.append({\n",
     "                **row[['Position ID', 'Employee ID_master']],\n",
@@ -63,7 +63,7 @@
     "                'Description': 'Position-Employee Combination Changed'\n",
     "            }, ignore_index=True)\n",
     "\n",
-    "        # Check additional columns for differences\n",
+    "        # Detect changes in additional columns\n",
     "        for col in additional_cols:\n",
     "            master_value, gha_value = row.get(f\"{col}_master\"), row.get(f\"{col}_gha\")\n",
     "            if pd.notna(master_value) and pd.notna(gha_value) and master_value != gha_value:\n",
@@ -73,7 +73,7 @@
     "                    'Description': additional_cols_descriptions[col]\n",
     "                }, ignore_index=True)\n",
     "\n",
-    "# Remove duplicates, keeping first occurrence\n",
+    "# Drop duplicates and keep the first occurrence\n",
     "changes_df.drop_duplicates(subset=['Position ID', 'Employee ID_master', 'Description'], inplace=True)\n",
     "\n",
     "# Output the changes DataFrame\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c51b8c5",
+   "id": "227c5888",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9707ddd",
+   "id": "51c0b552",
    "metadata": {},
    "outputs": [],
    "source": [
