--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,6 +3,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1d94bc4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample master_df and gha_df for demonstration\n",
+    "# Assuming master_df is already loaded with relevant columns and has historical data\n",
+    "# Assuming gha_df is loaded with monthly data that we need to compare against master_df\n",
+    "\n",
+    "# Columns to exclude from appending (like MoM columns)\n",
+    "columns_to_exclude = [col for col in master_df.columns if \"MoM\" in col]\n",
+    "columns_to_include = [col for col in master_df.columns if col not in columns_to_exclude]\n",
+    "\n",
+    "def identify_and_log_changes(master_df, gha_df):\n",
+    "    # Set data types for consistency (e.g., Position ID as str if needed)\n",
+    "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
+    "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
+    "    gha_df['Position ID'] = gha_df['Position ID'].astype(str)\n",
+    "    gha_df['Employee ID'] = gha_df['Employee ID'].astype(str)\n",
+    "\n",
+    "    # Merging GHA data with master to find new or changed entries\n",
+    "    merged_df = gha_df.merge(\n",
+    "        master_df[['Position ID', 'Employee ID']], \n",
+    "        on=['Position ID', 'Employee ID'], \n",
+    "        how='left', \n",
+    "        indicator=True\n",
+    "    )\n",
+    "\n",
+    "    # Identify new or changed records where the match is missing in the master file\n",
+    "    new_or_changed_records = merged_df[merged_df['_merge'] == 'left_only']\n",
+    "\n",
+    "    # Filter for relevant columns to append (those in master_df but not MoM columns)\n",
+    "    changes_df = new_or_changed_records[columns_to_include]\n",
+    "\n",
+    "    # Append changes_df to master_df\n",
+    "    master_df = pd.concat([master_df, changes_df], ignore_index=True)\n",
+    "\n",
+    "    return master_df, changes_df\n",
+    "\n",
+    "# Call the function to get updated master_df and changes_df\n",
+    "master_df, changes_df = identify_and_log_changes(master_df, gha_df)\n",
+    "\n",
+    "# Display results\n",
+    "print(\"Updated Master DataFrame:\")\n",
+    "print(master_df)\n",
+    "\n",
+    "print(\"\\nChanges DataFrame:\")\n",
+    "print(changes_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c6e7eafa",
    "metadata": {},
    "outputs": [],
