--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,48 +3,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d94bc4f",
+   "id": "71a3b52a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Sample master_df and gha_df for demonstration\n",
-    "# Assuming master_df is already loaded with relevant columns and has historical data\n",
-    "# Assuming gha_df is loaded with monthly data that we need to compare against master_df\n",
+    "# Sample data loading (assuming master_df and gha_df are already defined with necessary columns)\n",
     "\n",
-    "# Columns to exclude from appending (like MoM columns)\n",
+    "# Columns we want to check for changes\n",
+    "columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
     "columns_to_exclude = [col for col in master_df.columns if \"MoM\" in col]\n",
     "columns_to_include = [col for col in master_df.columns if col not in columns_to_exclude]\n",
     "\n",
-    "def identify_and_log_changes(master_df, gha_df):\n",
-    "    # Set data types for consistency (e.g., Position ID as str if needed)\n",
+    "def identify_and_log_changes(master_df, gha_df, month):\n",
+    "    # Ensure consistency in data types for merging (Position ID and Employee ID as strings)\n",
     "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
     "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
     "    gha_df['Position ID'] = gha_df['Position ID'].astype(str)\n",
     "    gha_df['Employee ID'] = gha_df['Employee ID'].astype(str)\n",
     "\n",
-    "    # Merging GHA data with master to find new or changed entries\n",
+    "    # Merge to find new records and those with matching Position ID and Employee ID\n",
     "    merged_df = gha_df.merge(\n",
-    "        master_df[['Position ID', 'Employee ID']], \n",
-    "        on=['Position ID', 'Employee ID'], \n",
-    "        how='left', \n",
-    "        indicator=True\n",
+    "        master_df[['Position ID', 'Employee ID'] + columns_to_check],\n",
+    "        on=['Position ID', 'Employee ID'],\n",
+    "        how='left',\n",
+    "        suffixes=('', '_master')\n",
     "    )\n",
     "\n",
-    "    # Identify new or changed records where the match is missing in the master file\n",
-    "    new_or_changed_records = merged_df[merged_df['_merge'] == 'left_only']\n",
+    "    # Step 1: Identify new records (those that did not match any Position ID and Employee ID in master_df)\n",
+    "    new_records = merged_df[merged_df[columns_to_check[0] + '_master'].isna()]\n",
+    "    \n",
+    "    # Step 2: Identify changed records where specified columns have different values\n",
+    "    changed_records = pd.DataFrame()\n",
+    "    for col in columns_to_check:\n",
+    "        # Check for mismatches in each column and log the change\n",
+    "        mask = merged_df[col] != merged_df[col + '_master']\n",
+    "        if not changed_records.empty:\n",
+    "            changed_records = pd.concat([changed_records, merged_df[mask]])\n",
+    "        else:\n",
+    "            changed_records = merged_df[mask]\n",
     "\n",
-    "    # Filter for relevant columns to append (those in master_df but not MoM columns)\n",
-    "    changes_df = new_or_changed_records[columns_to_include]\n",
+    "        # Add descriptive change notes\n",
+    "        merged_df.loc[mask, 'Description'] = f\"{col} Changed\"\n",
+    "\n",
+    "    # Step 3: Filter only columns present in master_df and add month and description\n",
+    "    new_records['Description'] = 'New Record'\n",
+    "    new_records['Month'] = month\n",
+    "    changed_records['Month'] = month\n",
+    "    changes_df = pd.concat([new_records, changed_records], ignore_index=True)\n",
+    "    \n",
+    "    # Select relevant columns to append (excluding MoM columns) and align with master_df\n",
+    "    changes_df = changes_df[columns_to_include + ['Month', 'Description']]\n",
     "\n",
     "    # Append changes_df to master_df\n",
     "    master_df = pd.concat([master_df, changes_df], ignore_index=True)\n",
     "\n",
     "    return master_df, changes_df\n",
     "\n",
-    "# Call the function to get updated master_df and changes_df\n",
-    "master_df, changes_df = identify_and_log_changes(master_df, gha_df)\n",
+    "# Example month\n",
+    "current_month = 'Nov-2024'\n",
+    "\n",
+    "# Run the function to get the updated master_df and changes_df\n",
+    "master_df, changes_df = identify_and_log_changes(master_df, gha_df, current_month)\n",
     "\n",
     "# Display results\n",
     "print(\"Updated Master DataFrame:\")\n",
