--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71a3b52a",
+   "id": "5e6d6549",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,19 +11,19 @@
     "\n",
     "# Sample data loading (assuming master_df and gha_df are already defined with necessary columns)\n",
     "\n",
-    "# Columns we want to check for changes\n",
+    "# Define columns to check for differences\n",
     "columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
     "columns_to_exclude = [col for col in master_df.columns if \"MoM\" in col]\n",
     "columns_to_include = [col for col in master_df.columns if col not in columns_to_exclude]\n",
     "\n",
     "def identify_and_log_changes(master_df, gha_df, month):\n",
-    "    # Ensure consistency in data types for merging (Position ID and Employee ID as strings)\n",
+    "    # Ensure consistency in data types for merging\n",
     "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
     "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
     "    gha_df['Position ID'] = gha_df['Position ID'].astype(str)\n",
     "    gha_df['Employee ID'] = gha_df['Employee ID'].astype(str)\n",
     "\n",
-    "    # Merge to find new records and those with matching Position ID and Employee ID\n",
+    "    # Merge on Position ID and Employee ID\n",
     "    merged_df = gha_df.merge(\n",
     "        master_df[['Position ID', 'Employee ID'] + columns_to_check],\n",
     "        on=['Position ID', 'Employee ID'],\n",
@@ -31,40 +31,42 @@
     "        suffixes=('', '_master')\n",
     "    )\n",
     "\n",
-    "    # Step 1: Identify new records (those that did not match any Position ID and Employee ID in master_df)\n",
-    "    new_records = merged_df[merged_df[columns_to_check[0] + '_master'].isna()]\n",
-    "    \n",
-    "    # Step 2: Identify changed records where specified columns have different values\n",
-    "    changed_records = pd.DataFrame()\n",
-    "    for col in columns_to_check:\n",
-    "        # Check for mismatches in each column and log the change\n",
-    "        mask = merged_df[col] != merged_df[col + '_master']\n",
-    "        if not changed_records.empty:\n",
-    "            changed_records = pd.concat([changed_records, merged_df[mask]])\n",
-    "        else:\n",
-    "            changed_records = merged_df[mask]\n",
-    "\n",
-    "        # Add descriptive change notes\n",
-    "        merged_df.loc[mask, 'Description'] = f\"{col} Changed\"\n",
-    "\n",
-    "    # Step 3: Filter only columns present in master_df and add month and description\n",
+    "    # Identify new records where columns in master are NaN\n",
+    "    new_records = merged_df[merged_df[columns_to_check[0] + '_master'].isna()].copy()\n",
     "    new_records['Description'] = 'New Record'\n",
     "    new_records['Month'] = month\n",
-    "    changed_records['Month'] = month\n",
+    "\n",
+    "    # Identify changed records where columns have different values\n",
+    "    changes = []\n",
+    "    for index, row in merged_df.iterrows():\n",
+    "        change_description = []\n",
+    "        for col in columns_to_check:\n",
+    "            if row[col] != row[col + '_master']:  # Check if there's a change\n",
+    "                change_description.append(f\"{col} Changed\")\n",
+    "        \n",
+    "        # If there are changes, log the row with the description\n",
+    "        if change_description:\n",
+    "            changed_row = row[gha_df.columns]  # Only take columns from gha_df\n",
+    "            changed_row['Description'] = '; '.join(change_description)\n",
+    "            changed_row['Month'] = month\n",
+    "            changes.append(changed_row)\n",
+    "\n",
+    "    # Convert list of changed records to DataFrame\n",
+    "    changed_records = pd.DataFrame(changes)\n",
+    "\n",
+    "    # Combine new and changed records\n",
     "    changes_df = pd.concat([new_records, changed_records], ignore_index=True)\n",
-    "    \n",
-    "    # Select relevant columns to append (excluding MoM columns) and align with master_df\n",
+    "\n",
+    "    # Filter only relevant columns for appending to master\n",
     "    changes_df = changes_df[columns_to_include + ['Month', 'Description']]\n",
     "\n",
     "    # Append changes_df to master_df\n",
-    "    master_df = pd.concat([master_df, changes_df], ignore_index=True)\n",
+    "    updated_master_df = pd.concat([master_df, changes_df], ignore_index=True)\n",
     "\n",
-    "    return master_df, changes_df\n",
+    "    return updated_master_df, changes_df\n",
     "\n",
-    "# Example month\n",
+    "# Example usage\n",
     "current_month = 'Nov-2024'\n",
-    "\n",
-    "# Run the function to get the updated master_df and changes_df\n",
     "master_df, changes_df = identify_and_log_changes(master_df, gha_df, current_month)\n",
     "\n",
     "# Display results\n",
