--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,13 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e6d6549",
+   "id": "d10657e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "# Sample data loading (assuming master_df and gha_df are already defined with necessary columns)\n",
     "\n",
     "# Define columns to check for differences\n",
     "columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
@@ -23,7 +21,7 @@
     "    gha_df['Position ID'] = gha_df['Position ID'].astype(str)\n",
     "    gha_df['Employee ID'] = gha_df['Employee ID'].astype(str)\n",
     "\n",
-    "    # Merge on Position ID and Employee ID\n",
+    "    # Merge on Position ID and Employee ID, using suffix to track changes\n",
     "    merged_df = gha_df.merge(\n",
     "        master_df[['Position ID', 'Employee ID'] + columns_to_check],\n",
     "        on=['Position ID', 'Employee ID'],\n",
@@ -31,31 +29,43 @@
     "        suffixes=('', '_master')\n",
     "    )\n",
     "\n",
-    "    # Identify new records where columns in master are NaN\n",
-    "    new_records = merged_df[merged_df[columns_to_check[0] + '_master'].isna()].copy()\n",
-    "    new_records['Description'] = 'New Record'\n",
-    "    new_records['Month'] = month\n",
-    "\n",
-    "    # Identify changed records where columns have different values\n",
+    "    # Initialize lists to store new and changed records\n",
+    "    new_records = []\n",
     "    changes = []\n",
-    "    for index, row in merged_df.iterrows():\n",
-    "        change_description = []\n",
-    "        for col in columns_to_check:\n",
-    "            if row[col] != row[col + '_master']:  # Check if there's a change\n",
-    "                change_description.append(f\"{col} Changed\")\n",
-    "        \n",
-    "        # If there are changes, log the row with the description\n",
-    "        if change_description:\n",
-    "            changed_row = row[gha_df.columns]  # Only take columns from gha_df\n",
-    "            changed_row['Description'] = '; '.join(change_description)\n",
-    "            changed_row['Month'] = month\n",
-    "            changes.append(changed_row)\n",
     "\n",
-    "    # Convert list of changed records to DataFrame\n",
-    "    changed_records = pd.DataFrame(changes)\n",
+    "    # Check each row in merged_df for changes or new records\n",
+    "    for index, row in merged_df.iterrows():\n",
+    "        if pd.isna(row[columns_to_check[0] + '_master']):  # New record if master columns are NaN\n",
+    "            new_record = row[gha_df.columns].copy()  # Only take gha_df columns\n",
+    "            new_record['Description'] = 'New Record'\n",
+    "            new_record['Month'] = month\n",
+    "            new_records.append(new_record)\n",
+    "        else:\n",
+    "            # Check for changes in specified columns\n",
+    "            change_description = []\n",
+    "            for col in columns_to_check:\n",
+    "                if row[col] != row[col + '_master']:  # Detect change\n",
+    "                    change_description.append(f\"{col} Changed\")\n",
+    "\n",
+    "            # If changes were detected, log the row with the description\n",
+    "            if change_description:\n",
+    "                changed_row = row[gha_df.columns].copy()  # Only take gha_df columns\n",
+    "                changed_row['Description'] = '; '.join(change_description)\n",
+    "                changed_row['Month'] = month  # Capture the month when the change was detected\n",
+    "                changes.append(changed_row)\n",
+    "\n",
+    "                # Update the master_df with the new baseline value for these columns\n",
+    "                for col in columns_to_check:\n",
+    "                    if row[col] != row[col + '_master']:\n",
+    "                        master_df.loc[(master_df['Position ID'] == row['Position ID']) & \n",
+    "                                      (master_df['Employee ID'] == row['Employee ID']), col] = row[col]\n",
+    "\n",
+    "    # Convert lists to DataFrames\n",
+    "    new_records_df = pd.DataFrame(new_records)\n",
+    "    changed_records_df = pd.DataFrame(changes)\n",
     "\n",
     "    # Combine new and changed records\n",
-    "    changes_df = pd.concat([new_records, changed_records], ignore_index=True)\n",
+    "    changes_df = pd.concat([new_records_df, changed_records_df], ignore_index=True)\n",
     "\n",
     "    # Filter only relevant columns for appending to master\n",
     "    changes_df = changes_df[columns_to_include + ['Month', 'Description']]\n",
@@ -66,7 +76,7 @@
     "    return updated_master_df, changes_df\n",
     "\n",
     "# Example usage\n",
-    "current_month = 'Nov-2024'\n",
+    "current_month = 'Jan-24'\n",
     "master_df, changes_df = identify_and_log_changes(master_df, gha_df, current_month)\n",
     "\n",
     "# Display results\n",
