--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -2,89 +2,126 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d10657e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Master DataFrame:\n",
+      "   Position ID          Source  Jan 24  Feb 24  Mar 24\n",
+      "0      000123             GHA     1.0     0.0     1.0\n",
+      "1      000456  Open Positions     1.0     0.0     0.0\n",
+      "2      000789             GHA     0.0     1.0     0.0\n",
+      "3      001001  Open Positions     0.0     1.0     1.0\n",
+      "\n",
+      "New Records DataFrame:\n",
+      "   Position ID          Source Month Added\n",
+      "0      002002             GHA      Feb 24\n",
+      "1      004004  Open Positions      Feb 24\n",
+      "2      003003             GHA      Mar 24\n",
+      "3      005005  Open Positions      Mar 24\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-548c8a286ffb>:52: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  gha_new_records['Source'] = 'GHA'\n",
+      "<ipython-input-1-548c8a286ffb>:53: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  gha_new_records['Month Added'] = month\n",
+      "<ipython-input-1-548c8a286ffb>:57: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  open_pos_new_records['Source'] = 'Open Positions'\n",
+      "<ipython-input-1-548c8a286ffb>:58: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  open_pos_new_records['Month Added'] = month\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "# Define columns to check for differences\n",
-    "columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
-    "columns_to_exclude = [col for col in master_df.columns if \"MoM\" in col]\n",
-    "columns_to_include = [col for col in master_df.columns if col not in columns_to_exclude]\n",
+    "# Sample master DataFrame\n",
+    "master_df = pd.DataFrame({\n",
+    "    'Position ID': ['00123', '00456', '000789', '01001'],\n",
+    "    'Source': ['GHA', 'Open Positions', 'GHA', 'Open Positions']\n",
+    "})\n",
     "\n",
-    "def identify_and_log_changes(master_df, gha_df, month):\n",
-    "    # Ensure consistency in data types for merging\n",
-    "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
-    "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
-    "    gha_df['Position ID'] = gha_df['Position ID'].astype(str)\n",
-    "    gha_df['Employee ID'] = gha_df['Employee ID'].astype(str)\n",
+    "# Sample monthly GHA and Open Positions data (simulating gha_jan_df, gha_feb_df, etc.)\n",
+    "gha_monthly_files = {\n",
+    "    'Jan 24': pd.DataFrame({'Position ID': ['00123', '00456']}),\n",
+    "    'Feb 24': pd.DataFrame({'Position ID': ['000789', '01001', '02002']}),  # New record: '02002'\n",
+    "    'Mar 24': pd.DataFrame({'Position ID': ['00123', '01001', '03003']})   # New record: '03003'\n",
+    "}\n",
     "\n",
-    "    # Merge on Position ID and Employee ID, using suffix to track changes\n",
-    "    merged_df = gha_df.merge(\n",
-    "        master_df[['Position ID', 'Employee ID'] + columns_to_check],\n",
-    "        on=['Position ID', 'Employee ID'],\n",
-    "        how='left',\n",
-    "        suffixes=('', '_master')\n",
+    "open_pos_monthly_files = {\n",
+    "    'Jan 24': pd.DataFrame({'Position ID': ['000789', '00456']}),\n",
+    "    'Feb 24': pd.DataFrame({'Position ID': ['00123', '01001', '04004']}),  # New record: '04004'\n",
+    "    'Mar 24': pd.DataFrame({'Position ID': ['000789', '01001', '05005']})  # New record: '05005'\n",
+    "}\n",
+    "\n",
+    "# Standardize Position ID length in master_df\n",
+    "max_length = master_df['Position ID'].str.len().max()\n",
+    "master_df['Position ID'] = master_df['Position ID'].str.zfill(max_length)\n",
+    "\n",
+    "# DataFrame to capture new records not present in the master_df\n",
+    "new_records = pd.DataFrame()\n",
+    "\n",
+    "# Loop over each month and update respective columns based on the source condition\n",
+    "for month in gha_monthly_files.keys():\n",
+    "    gha_df = gha_monthly_files[month]\n",
+    "    open_pos_df = open_pos_monthly_files[month]\n",
+    "    \n",
+    "    # Standardize Position IDs in both GHA and Open Positions files\n",
+    "    gha_df['Position ID'] = gha_df['Position ID'].str.zfill(max_length)\n",
+    "    open_pos_df['Position ID'] = open_pos_df['Position ID'].str.zfill(max_length)\n",
+    "    \n",
+    "    # Use np.where to apply conditions based on the 'Source' column\n",
+    "    master_df[month] = np.where(\n",
+    "        master_df['Source'] == 'GHA', \n",
+    "        master_df['Position ID'].apply(lambda x: 1 if x in gha_df['Position ID'].values else 0),\n",
+    "        np.where(\n",
+    "            master_df['Source'] == 'Open Positions', \n",
+    "            master_df['Position ID'].apply(lambda x: 1 if x in open_pos_df['Position ID'].values else 0),\n",
+    "            np.nan  # Leave as NaN if Source is neither GHA nor Open Positions\n",
+    "        )\n",
     "    )\n",
     "\n",
-    "    # Initialize lists to store new and changed records\n",
-    "    new_records = []\n",
-    "    changes = []\n",
+    "    # Find records in gha_df not present in master_df and add them to new_records\n",
+    "    gha_new_records = gha_df[~gha_df['Position ID'].isin(master_df['Position ID'])]\n",
+    "    gha_new_records['Source'] = 'GHA'\n",
+    "    gha_new_records['Month Added'] = month\n",
     "\n",
-    "    # Check each row in merged_df for changes or new records\n",
-    "    for index, row in merged_df.iterrows():\n",
-    "        if pd.isna(row[columns_to_check[0] + '_master']):  # New record if master columns are NaN\n",
-    "            new_record = row[gha_df.columns].copy()  # Only take gha_df columns\n",
-    "            new_record['Description'] = 'New Record'\n",
-    "            new_record['Month'] = month\n",
-    "            new_records.append(new_record)\n",
-    "        else:\n",
-    "            # Check for changes in specified columns\n",
-    "            change_description = []\n",
-    "            for col in columns_to_check:\n",
-    "                if row[col] != row[col + '_master']:  # Detect change\n",
-    "                    change_description.append(f\"{col} Changed\")\n",
+    "    # Find records in open_pos_df not present in master_df and add them to new_records\n",
+    "    open_pos_new_records = open_pos_df[~open_pos_df['Position ID'].isin(master_df['Position ID'])]\n",
+    "    open_pos_new_records['Source'] = 'Open Positions'\n",
+    "    open_pos_new_records['Month Added'] = month\n",
     "\n",
-    "            # If changes were detected, log the row with the description\n",
-    "            if change_description:\n",
-    "                changed_row = row[gha_df.columns].copy()  # Only take gha_df columns\n",
-    "                changed_row['Description'] = '; '.join(change_description)\n",
-    "                changed_row['Month'] = month  # Capture the month when the change was detected\n",
-    "                changes.append(changed_row)\n",
-    "\n",
-    "                # Update the master_df with the new baseline value for these columns\n",
-    "                for col in columns_to_check:\n",
-    "                    if row[col] != row[col + '_master']:\n",
-    "                        master_df.loc[(master_df['Position ID'] == row['Position ID']) & \n",
-    "                                      (master_df['Employee ID'] == row['Employee ID']), col] = row[col]\n",
-    "\n",
-    "    # Convert lists to DataFrames\n",
-    "    new_records_df = pd.DataFrame(new_records)\n",
-    "    changed_records_df = pd.DataFrame(changes)\n",
-    "\n",
-    "    # Combine new and changed records\n",
-    "    changes_df = pd.concat([new_records_df, changed_records_df], ignore_index=True)\n",
-    "\n",
-    "    # Filter only relevant columns for appending to master\n",
-    "    changes_df = changes_df[columns_to_include + ['Month', 'Description']]\n",
-    "\n",
-    "    # Append changes_df to master_df\n",
-    "    updated_master_df = pd.concat([master_df, changes_df], ignore_index=True)\n",
-    "\n",
-    "    return updated_master_df, changes_df\n",
-    "\n",
-    "# Example usage\n",
-    "current_month = 'Jan-24'\n",
-    "master_df, changes_df = identify_and_log_changes(master_df, gha_df, current_month)\n",
+    "    # Append new records from both GHA and Open Positions to new_records DataFrame\n",
+    "    new_records = pd.concat([new_records, gha_new_records, open_pos_new_records], ignore_index=True)\n",
     "\n",
     "# Display results\n",
-    "print(\"Updated Master DataFrame:\")\n",
-    "print(master_df)\n",
-    "\n",
-    "print(\"\\nChanges DataFrame:\")\n",
-    "print(changes_df)\n"
+    "print(\"Updated Master DataFrame:\\n\", master_df)\n",
+    "print(\"\\nNew Records DataFrame:\\n\", new_records)\n"
    ]
   },
   {
